--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap');
+
 :root {
     --Blue: hsl(246, 80%, 60%);
-    --Lightred-work: hsl(15, 100%, 70%);
-    --Softblue-play: hsl(195, 74%, 62%);
-    --Lightred-study: hsl(348, 100%, 68%);
-    --Limegreen-exercise: hsl(145, 58%, 55%);
-    --Violet-social: hsl(264, 64%, 52%);
-    --Softorange-self-care: hsl(43, 84%, 65%);
+    --work: hsl(15, 100%, 70%);
+    --play: hsl(195, 74%, 62%);
+    --study: hsl(348, 100%, 68%);
+    --exercise: hsl(145, 58%, 55%);
+    --social: hsl(264, 64%, 52%);
+    --selfcare: hsl(43, 84%, 65%);
 
     --Very-dark-blue: hsl(226, 43%, 10%);
     --Dark-blue: hsl(235, 46%, 20%);
@@ -28,7 +30,7 @@ body {
     background-color: var(--Very-dark-blue);
     color: white;
     font-family: 'Rubik', sans-serif;
-
+    /* font-weight: 300; */
 }
 
 .tracker {
@@ -65,6 +67,8 @@ body {
     border-radius: 50%;
     max-height: 6rem;
     max-width: 6rem;
+    /* width: 100%; */
+    /* height: 100%; */
 }
 
 .profile__id {
@@ -78,7 +82,7 @@ body {
     padding: 1rem;
     /* height: 100%; */
     width: 100%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .profile__subheader {
@@ -119,32 +123,125 @@ body {
 
 }
 
-.card {
-    padding-top: 3rem;
-    /* border: 1px solid magenta; */
-    background-color: var(--Lightred-study);
-    border-radius: 1.6rem;
+.cards__container {
+    /* background-color: orange; */
+    /* padding: 1rem; */
 }
 
-.card__detail {
+.card {
+    padding-top: 3.2rem;
+    /* border: 1px solid magenta; */
+    /* background-color: var(--study); */
+    border-radius: 1.6rem;
+    margin-bottom: 2rem;
+}
+
+.card__container {
+    position: relative;
     background-color: var(--Dark-blue);
     border-radius: 1.6rem;
     padding: 2rem;
+    /* border: 1px solid blue; */
 }
 
+.card__container:hover {
+    background-color: var(--Desaturated-blue);
+    cursor: pointer;
+}
+
+
 .card__menu-icon {
+    /* width: 100%; */
+    /* padding: 1rem; */
     /* border: 1px solid red; */
+}
+
+.card__menu-icon:hover {
+    cursor: pointer;
+    /* fill: orange; */
 }
 
 .card__heading {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.card__heading > svg:hover {
+    /* fill: orange; */
 }
 
 .card__header {
     font-size: 1.8rem;
     color: white;
+}
+
+.card__bg-image {
+    position: absolute;
+    z-index: 9999;
+    /* width: 100%; */
+    height: 3rem;
+    right: 1rem;
+    top: -2rem;
+    color: black;
+    /* background-color: magenta; */
+
+}
+
+.card__detail {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.card__current {
+    font-size: 3.2rem;
+    font-weight: 300;
+}
+
+.card__previous {
+    font-size: 1.6rem;
+    font-weight: 300;
+    color: var(--Pale-Blue);
+}
+
+.card-work,
+.card-play,
+.card-study,
+.card-exercise,
+.card-social,
+.card-selfcare {
+    background-color: var(--work);
+    /* background-image: url('../images/icon-work.svg'); */
+    background-repeat: no-repeat;
+    background-position: 95% -25%;
+    background-size: 75px 75px;
+    
+    
+}
+
+.card-play {
+    background-color: var(--play);
+}
+
+.card-study {
+    background-color: var(--study);
+}
+
+.card-exercise {
+    background-color: var(--exercise);
+}
+
+.card-social {
+    background-color: var(--social);
+}
+
+.card-selfcare {
+    background-color: var(--selfcare);
 }
 
 /* .card__menu-icon {
