--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12,7 +12,7 @@
     --Very-dark-blue: hsl(226, 43%, 10%);
     --Dark-blue: hsl(235, 46%, 20%);
     --Desaturated-blue: hsl(235, 45%, 61%);
-    --Pale-Blue: hsl(236, 100%, 87%);
+    --Pale-Blue: hsla(236, 100%, 87%, 0.728);
 }
 
 * {
@@ -28,29 +28,32 @@ html {
 }
 
 body {
-    background-color: var(--Very-dark-blue);
-    color: white;
-    font-family: 'Rubik', sans-serif;
     width: 100%;
     height: 100%;
+
+    font-family: 'Rubik', sans-serif;
+    color: white;
+    background-color: var(--Very-dark-blue);
 }
 
 #root {
-    width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    width: 100%;
+    height: 100%;
 }
 
 .tracker {
-    align-self: flex-start;
-    padding: 2rem;
-    min-width: 37.5rem;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(auto-fit, 1fr);
     grid-gap: 2rem;
+    align-self: flex-start;
+
+    padding: 2rem;
+    min-width: 37.5rem;
 }
 
 .profile {
@@ -63,23 +66,27 @@ body {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+
     width: 100%;
     padding: 3rem;
+    
     border-radius: 1.6rem;
     background-color: var(--Blue);
 }
 
 .profile__image {
-    border: 3px solid white;
-    border-radius: 50%;
     max-height: 6rem;
     max-width: 6rem;
+
+    border: 3px solid white;
+    border-radius: 50%;
 }
 
 .profile__id {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+
     margin-left: 2rem;
     width: 100%;
 }
@@ -108,10 +115,13 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+
     padding: 2rem 1rem;
+
     color: var(--Desaturated-blue);
     font-size: 1.8rem;
     font-weight: bold;
+
     transition: all ease 300ms;
 }
 
@@ -125,7 +135,6 @@ body {
 .time-toggle__item:hover {
     color: white;
     transition: all ease 300ms;
-
 }
 
 .isActive {
@@ -135,18 +144,22 @@ body {
 
 .card {
     position: relative;
+
     padding-top: 3.2rem;
     border-radius: 1.6rem;
     margin-bottom: 2rem;
+
     overflow: hidden;
 }
 
 .card__container {
     position: relative;
     z-index: 9999;
+
+    padding: 2rem;
+
     background-color: var(--Dark-blue);
     border-radius: 1.6rem;
-    padding: 2rem;
     overflow: hidden;
 }
 
@@ -165,6 +178,7 @@ svg:hover {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
     margin-bottom: 1rem;
 }
 
@@ -174,17 +188,40 @@ svg:hover {
     font-weight: 500;
 }
 
+.card__menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    height: 2rem;
+
+    border: 1px solid white;
+}
+
+
+
+.card__menu-icon {
+    justify-self: center;
+    align-self: center;
+    
+    fill: var(--Pale-Blue);
+}
+
+.card__menu-icon:hover {
+    fill: white;
+}
+
+
 .card__bg-image {
     position: absolute;
-    z-index: 9999;
-    /* width: 100%; */
-    height: 3rem;
+    z-index: 9999;    
     right: 3rem;
     top: .5rem;
+
+    height: 3rem;
+
     color: black;
     transform: scale(2);
-    /* background-color: magenta; */
-
 }
 
 .card__detail {
@@ -207,46 +244,49 @@ svg:hover {
 }
 
 .card-work {
-    background-color: var(--work);
+    background-image: linear-gradient(to bottom, var(--work) 50%, transparent 50%);
 }
 
 .card-play {
-    background-color: var(--play);
+    background-image: linear-gradient(to bottom, var(--play) 50%, transparent 50%);
 }
 
 .card-study {
-    background-color: var(--study);
+    background-image: linear-gradient(to bottom, var(--study) 50%, transparent 50%);
 }
 
 .card-exercise {
-    background-color: var(--exercise);
+    background-image: linear-gradient(to bottom, var(--exercise) 50%, transparent 50%);
 }
 
 .card-social {
-    background-color: var(--social);
+    background-image: linear-gradient(to bottom, var(--social) 50%, transparent 50%);
 }
 
 .card-selfcare {
-    background-color: var(--selfcare);
+    background-image: linear-gradient(to bottom, var(--selfcare) 50%, transparent 50%);
 }
+
 
 @media screen and (min-width: 1000px) {
     .tracker {
-        align-self: center;
-        max-width: 100rem;
         display: grid;
         grid-template-columns: 1fr 3fr;
         grid-template-rows: 1fr;
         grid-gap: 2rem;
+        align-self: center;
+
+        max-width: 100rem;
     }
 
     .profile {
-        height: 100%;
-        width: 20rem;
-        align-content: center;
-        margin: 0;
         display: flex;
         flex-direction: column;
+        align-content: center;
+
+        height: 100%;
+        width: 20rem;
+        margin: 0;
     }
 
     .profile__header {
@@ -254,7 +294,16 @@ svg:hover {
         justify-content: space-around;
         align-items: flex-start;
         flex: 3;
+
         padding: 3rem 2rem;
+    }
+
+    .profile__subheader {
+        margin-bottom: .5rem;
+    }
+
+    .profile__name {
+        line-height: 1.25;
     }
 
     .profile__id {
@@ -268,7 +317,9 @@ svg:hover {
     .time-toggle__list {
         display: flex;
         flex-direction: column;
+
         padding: .5rem;
+
         color: var(--Desaturated-blue);
         font-size: 1.8rem;
         font-weight: bold;
@@ -277,18 +328,21 @@ svg:hover {
     
     .time-toggle__item {
         padding: 1rem;
+
         font-size: 1.4rem;
         transition: all ease 300ms;
     }
 
     .cards__container {
+        position: relative;
+
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(2, 1fr);
         grid-gap: 2rem;
+
         margin: 0;
         padding: 0;
-        position: relative;
     }
 
     .card {
